Attempting to fix  gap between bottom of page and footer.

--- a/src/AppBundle/Resources/public/css/style.scss
+++ b/src/AppBundle/Resources/public/css/style.scss
@@ -242,7 +242,6 @@ td.die-face {
 
 html, body {
 	height: 100%;
-	min-height: 100%;
 }
 td.type, td.faction {
 	text-align:center;
@@ -260,10 +259,11 @@ td.type, td.faction {
 	border: 1px solid red;
 }
 #wrapper {
-	min-height: 100%;
-	border-bottom: 10px solid #0b1822;
-	padding-bottom: 100px;
+  	flex: 1 0 auto;
+  	padding-bottom: 0;
+  	border-bottom: 0;
 }
+
 footer {
 	padding-top: 20px;
 	background-color: #334459;
